--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
       <!-- Marker 1 -->
       <a-marker type="pattern" url="pattern-marker1.patt">
         <a-plane 
-          position="0 0.5 0" 
+          position="1 0 0" 
           rotation="-90 0 0" 
           width="1.5" 
           height="1" 
           color="#FFFFFF">
         </a-plane>
         <a-text 
-          value="Marker 1: This is the first marker's info paragraph." 
+          value="PUMP: ISO-33121  MODEL: VG" 
           width="2" 
           align="center" 
           color="#000000" 
-          position="0 0.55 0.01"
+          position="1 0.01 0"
           rotation="-90 0 0">
         </a-text>
       </a-marker>
