--- a/index.html
+++ b/index.html
@@ -22,11 +22,14 @@
         <a-entity position="1 0 0" rotation="-90 0 0">
           <a-plane width="1.5" height="1" color="#FFFFFF"></a-plane>
           <a-text 
-            value="Marker 1: Info about the first marker." 
+            value="PUMP
+            MODEL: PD:123
+            OEM: VG
+            ISO - 3052-4" 
             width="1.4" 
             align="center" 
             color="#000000" 
-            position="0 0.02 0">
+            position="0 0.1 0">
           </a-text>
         </a-entity>
       </a-marker>
