--- a/index.html
+++ b/index.html
@@ -10,30 +10,28 @@
     <a-scene embedded arjs="sourceType: webcam;" vr-mode-ui="enabled: false">
 
       <!-- MARKER 1 -->
-      <a-marker 
-        type="pattern" 
-        url="pattern-marker1.patt"
-        emitevents="true"
-        smooth="true"
-        smoothCount="5"
-        smoothTolerance="0.01"
-        smoothThreshold="2"
-      >
-        <a-entity position="1 0 0" rotation="-90 0 0">
-          <a-plane width="1.5" height="1" color="#FFFFFF"></a-plane>
-          <a-text 
-            value="PUMP
-            MODEL: PD:123
-            OEM: VG
-            ISO - 3052-4" 
-            width="1.4" 
-            align="center" 
-            color="#000000" 
-            position="0 0.1 0.001">
-          </a-text>
-        </a-entity>
-      </a-marker>
+      <a-marker type="pattern" url="pattern-marker1.patt">
+  <a-entity rotation="-90 0 0">
 
+    <!-- background plane placed flat beside marker -->
+    <a-plane 
+      width="1.5" 
+      height="1" 
+      color="#FFFFFF" 
+      position="1 0 0">
+    </a-plane>
+
+    <!-- text raised above plane and slightly forward -->
+    <a-text 
+      value="PUMP\nMODEL: PD:123\nOEM: VG\nISO - 3052-4" 
+      width="1.4" 
+      align="center" 
+      color="#000000" 
+      position="1 0.01 0.01">  <!-- lifted in Y and nudged in Z -->
+    </a-text>
+
+  </a-entity>
+</a-marker>
       <!-- MARKER 2 -->
       <a-marker 
         type="pattern" 
