--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html>
   <head>
     <title>Multi Marker Info Display</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.min.js"></script>
   </head>
   <body style="margin: 0; overflow: hidden;">
-    <a-scene embedded arjs="sourceType: webcam;" vr-mode-ui="enabled: false">
+    <a-scene embedded arjs="sourceType: webcam;" renderer="logarithmicDepthBuffer: true;">
 
+  <!-- Assets -->
   <a-assets>
-      <a-asset-item id="myModel" src="model.glb"></a-asset-item>
+    <a-asset-item id="myModel" src="model.glb"></a-asset-item>
   </a-assets>
+
 
       <!-- MARKER 1 -->
       <a-marker type="pattern" url="pattern-marker1.patt">
@@ -49,11 +51,11 @@
   smoothThreshold="2"
 >
   <!-- Load the GLB model beside the marker -->
-  <a-entity 
-    gltf-model="#myModel"     <!-- Make sure this matches your <a-assets> ID -->
-    position="1 0 0"          <!-- Places model beside marker -->
-    scale="0.1 0.1 0.1"       <!-- Adjust scale to fit -->
-    rotation="0 0 0">         <!-- Adjust orientation as needed -->
+  <a-entity
+    glb-model="#myModel"
+    position="1 0 0"
+    scale="0.01 0.01 0.01"
+    rotation="0 0 0">
   </a-entity>
 </a-marker>
 
