--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Multi Marker Info Display</title>
+    <title>3 Marker WebAR Demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.min.js"></script>
@@ -9,79 +9,85 @@
   <body style="margin: 0; overflow: hidden;">
     <a-scene embedded arjs="sourceType: webcam;" renderer="logarithmicDepthBuffer: true;">
 
-  <!-- Assets -->
-  <a-assets>
-    <a-asset-item id="myModel" src="model.glb"></a-asset-item>
-  </a-assets>
+      <!-- Assets -->
+      <a-assets>
+        <a-asset-item id="testModel" src="model.glb"></a-asset-item> <!-- Replace with your model -->
+      </a-assets>
 
-
-      <!-- MARKER 1 -->
-      <a-marker type="pattern" url="pattern-marker1.patt">
-  <a-entity rotation="-90 0 0">
-
-    <!-- Translucent background panel -->
-    <a-plane 
-      width="1.5" 
-      height="1" 
-      position="1 0 0" 
-      material="color: #FFFFFF; opacity: 0.8; transparent: true; shader: flat;">
-    </a-plane>
-
-    <!-- Multi-line text slightly above the plane -->
-    <a-text 
-      value="PUMP\nMODEL: PD:123\nOEM: VG\nISO - 3052-4" 
-      width="1.4" 
-      align="center" 
-      color="#000000" 
-      position="1 0.1 0" 
-      line-height="60"
-      wrap-count="30">
-    </a-text>
-
-  </a-entity>
-</a-marker>
-      <!-- MARKER 2: Displays GLB Model -->
-<a-marker 
-  type="pattern" 
-  url="pattern-marker2.patt"
-  emitevents="true"
-  smooth="true"
-  smoothCount="5"
-  smoothTolerance="0.01"
-  smoothThreshold="2"
->
-  <!-- Load the GLB model beside the marker -->
-  <a-entity
-    glb-model="#myModel"
-    position="1 0 0"
-    scale="0.01 0.01 0.01"
-    rotation="0 0 0">
-  </a-entity>
-</a-marker>
-
-      <!-- MARKER 3 -->
-      <a-marker 
-        type="pattern" 
-        url="pattern-marker3.patt"
-        emitevents="true"
-        smooth="true"
-        smoothCount="5"
-        smoothTolerance="0.01"
-        smoothThreshold="2"
-      >
-        <a-entity position="1 0 0" rotation="-90 0 0">
-          <a-plane width="1.5" height="1" color="#D0F0FF"></a-plane>
+      <!-- MARKER 1: Text Panel -->
+      <a-marker type="pattern" url="pattern-marker1.patt"
+                emitevents="true"
+                smooth="true"
+                smoothCount="5"
+                smoothTolerance="0.01"
+                smoothThreshold="2">
+        <a-entity rotation="-90 0 0">
+          <a-plane 
+            width="1.5" 
+            height="1" 
+            position="1 0 0" 
+            material="color: #FFFFFF; opacity: 0.85; transparent: true; shader: flat;">
+          </a-plane>
           <a-text 
-            value="Marker 3: Final marker with its own message." 
+            value="PUMP\nMODEL: PD:123\nOEM: VG\nISO - 3052-4" 
             width="1.4" 
             align="center" 
             color="#000000" 
-            position="0 0.02 0">
+            position="1 0.05 0.01" 
+            line-height="60"
+            wrap-count="30">
           </a-text>
         </a-entity>
       </a-marker>
 
+      <!-- MARKER 2: GLB Model + Text -->
+      <a-marker type="pattern" url="pattern-marker2.patt"
+                emitevents="true"
+                smooth="true"
+                smoothCount="5"
+                smoothTolerance="0.01"
+                smoothThreshold="2">
+        <a-entity rotation="-90 0 0">
+          <a-text 
+            value="Marker 2: Model Loaded" 
+            width="2" 
+            align="center" 
+            color="black" 
+            position="0 0.5 0.01">
+          </a-text>
+          <a-entity 
+            gltf-model="#testModel" 
+            position="0 0 0" 
+            scale="0.1 0.1 0.1" 
+            rotation="0 0 0">
+          </a-entity>
+        </a-entity>
+      </a-marker>
+
+      <!-- MARKER 3: Just Text -->
+      <a-marker type="pattern" url="pattern-marker3.patt"
+                emitevents="true"
+                smooth="true"
+                smoothCount="5"
+                smoothTolerance="0.01"
+                smoothThreshold="2">
+        <a-entity rotation="-90 0 0">
+          <a-plane width="1.5" height="1" color="#EEEEEE" position="0 0 0"></a-plane>
+          <a-text 
+            value="Marker 3 Detected!\nNext Step: Open Valve" 
+            width="1.4" 
+            align="center" 
+            color="#000000" 
+            position="0 0.05 0.01"
+            line-height="60"
+            wrap-count="30">
+          </a-text>
+        </a-entity>
+      </a-marker>
+
+      <!-- Camera -->
       <a-entity camera></a-entity>
     </a-scene>
   </body>
 </html>
+
