--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             material="color: #FFFFFF; opacity: 0.85; transparent: true; shader: flat;">
           </a-plane>
           <a-text 
-            value="PUMP\nMODEL: PD:123\nOEM: VG\nISO - 3052-4" 
+            value="PUMP MODEL: PD:123 OEM: VG ISO - 3052-4" 
             width="1.4" 
             align="center" 
             color="#000000" 
