--- a/index.html
+++ b/index.html
@@ -1,100 +1,56 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>3 Marker AR Demo</title>
+    <title>3‑Marker WebAR Demo (icons now flat)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.min.js"></script>
+    <style>body{margin:0;overflow:hidden}</style>
   </head>
-  <body style="margin: 0; overflow: hidden;">
+
+  <body>
     <a-scene embedded arjs="sourceType: webcam;" renderer="logarithmicDepthBuffer: true;">
-      
-      <!-- Assets -->
+      <!-- assets -->
       <a-assets>
-        <a-asset-item id="testModel" src="model.glb"></a-asset-item> <!-- Your model file -->
+        <a-asset-item id="glb" src="model.glb"></a-asset-item>
       </a-assets>
 
-      <!-- MARKER 1: Text Info Panel -->
+      <!-- MARKER 1 – info panel -->
       <a-marker type="pattern" url="pattern-marker1.patt"
-                emitevents="true"
-                smooth="true"
-                smoothCount="5"
-                smoothTolerance="0.01"
-                smoothThreshold="2"
-        >
-        <a-entity position="1 0 0" rotation="-90 0 0">
-          <a-plane width="1.5" height="1" color="#FFFFFF"> 
-          </a-plane>
-          <a-text 
-            value="Marker 1: Info about the first marker." 
-            width="1.4" 
-            align="center" 
-            color="#000000" 
-            position="0 0.02 0">
-          </a-text>
-        </a-entity>
+                emitevents smooth="true" smoothCount="5" smoothTolerance="0.01">
+        <a-plane width="1.5" height="1"
+                 material="color:#fff;opacity:0.85;transparent:true;shader:flat"
+                 position="0 0 0.01"  side="double"></a-plane>
+
+        <a-text value="PUMP\nMODEL PD‑123\nOEM VG\nISO 3052‑4"
+                 width="1.4" align="center" color="#000"
+                 position="0 0 0.02" line-height="60" wrap-count="30"
+                 side="double" baseline="center"></a-text>
       </a-marker>
 
-      <!-- MARKER 2: GLB Model + Label -->
+      <!-- MARKER 2 – model + label -->
       <a-marker type="pattern" url="pattern-marker2.patt"
-                emitevents="true"
-                smooth="true"
-                smoothCount="5"
-                smoothTolerance="0.01"
-                smoothThreshold="2">
-        <a-entity rotation="-90 0 0">
+                emitevents smooth="true" smoothCount="5" smoothTolerance="0.01">
+        <a-text value="Model Loaded: Valve" width="2" align="center" color="#000"
+                position="0 0.2 0.02" side="double" baseline="center"></a-text>
 
-          <!-- Label text -->
-          <a-text 
-            value="Model Loaded: Valve Assembly" 
-            width="2" 
-            align="center" 
-            color="black" 
-            position="0 0.2 0.01"
-            side="double"
-            baseline="center">
-          </a-text>
-
-          <!-- Scaled-up GLB model -->
-          <a-entity 
-            gltf-model="#testModel" 
-            position="0 0 0" 
-            scale="0.5 0.5 0.5" 
-            rotation="0 0 0">
-          </a-entity>
-        </a-entity>
+        <a-entity gltf-model="#glb" scale="0.5 0.5 0.5"
+                  position="0 0 0.01" rotation="0 0 0"></a-entity>
       </a-marker>
 
-      <!-- MARKER 3: Instruction Text Panel -->
+      <!-- MARKER 3 – instruction panel -->
       <a-marker type="pattern" url="pattern-marker3.patt"
-                emitevents="true"
-                smooth="true"
-                smoothCount="5"
-                smoothTolerance="0.01"
-                smoothThreshold="2">
-        <a-entity rotation="-90 0 0">
-          <a-plane 
-            width="1.5" 
-            height="1" 
-            position="0 0 0" 
-            material="color: #EEEEEE; opacity: 0.85; transparent: true; shader: flat;">
-          </a-plane>
+                emitevents smooth="true" smoothCount="5" smoothTolerance="0.01">
+        <a-plane width="1.5" height="1"
+                 material="color:#eee;opacity:0.85;transparent:true;shader:flat"
+                 position="0 0 0.01" side="double"></a-plane>
 
-          <a-text 
-            value="MARKER 3:\nOpen the bleed valve\nuntil pressure drops to zero." 
-            width="1.4" 
-            align="center" 
-            color="#000000" 
-            position="0 0.1 0.01"
-            line-height="60"
-            wrap-count="30"
-            side="double"
-            baseline="center">
-          </a-text>
-        </a-entity>
+        <a-text value="STEP 3:\nOpen bleed valve\nuntil pressure = 0"
+                 width="1.4" align="center" color="#000"
+                 position="0 0 0.02" line-height="60" wrap-count="30"
+                 side="double" baseline="center"></a-text>
       </a-marker>
 
-      <!-- Camera -->
       <a-entity camera></a-entity>
     </a-scene>
   </body>
